# monitor

./: README.md
test/: Readme  han
v19_3/: build.sh  new_task.json
v19_3/dmxperf/agents/: device_agent.py  host_agent.py
v19_3/dmxperf/cli/: main.py
v19_3/dmxperf/collector/: walltime_collector.py
v19_3/dmxperf/controller/: controller.py
v19_3/dmxperf/src/cpp/: topologyQuery.cu
v19_3/dmxperf/tools/: gpu_tools.py
v19_3/dmxperf/workloads/: dmx_solver.py
v20/: build.sh  task.json
v20/dmxperf/analysis/: network_plotter.py  plotter.py  reporter.py  time.py
v20/dmxperf/cli/: main.py
v20/dmxperf/collector/: data_collector.py
v20/dmxperf/controller/: controller.py
v20/dmxperf/infra/: executor.py
v20/dmxperf/src/cpp/: deviceQuery.cu  multi_gpu_gemm.cpp
v20/dmxperf/tools/: gpu_tools.py
v20/dmxperf/workloads/: __init__.py  base.py  dmx_base.py
v20/dmxperf/workloads/cases/: ivc.py
v21/: build.sh  run.py  task1.json
v21/dmxperf/: __init__.py
v21/dmxperf/analysis/: __init__.py  reporter.py
v21/dmxperf/cli/: main.py
v21/dmxperf/collector/: .nfs000000000028122500000669
v21/dmxperf/controller/: controller.py
v21/dmxperf/monitor/: manager.py
v21/dmxperf/src/cpp/: CMakeLists.txt
v21/dmxperf/task/: task_runner.py
v21/dmxperf/tools/: gpu_tools.py
v21/dmxperf/workloads/: __init__.py  dmx_base.py  hardware.py
